RegexPathElement